# clingo-dl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .ycm_extra_conf.py  CHANGES.md  CMakeLists.txt  INSTALL.md  LICENSE.md  MANIFEST.in  Makefile  README.md  TODO.md  appveyor.yml  clingo-dl.cc  clingo-dl.cpp  clingo-dl.h  clingoDL.cpp  clingoDL.h  encoding-dl.lp  encoding.casp  encoding.clingo  main.cc  main.cpp  mlb.py  open_shop_dl.lp  propagator.cc  propagator.cpp  propagator.h  propagator.hh  reproduce.txt  setup.py  tai4_4_1.lp  util.hh
.github/: adjust_version.py  conda.py  deploy.yml  macos-env.yml  manylinux.py  pipsource.py  pipwinmac.py  trigger.sh
.github/conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
.github/ppa-wip/: build.sh
.github/ppa-wip/bionic/debian/: changelog  control  rules
.github/ppa-wip/focal/debian/: NEWS  changelog  control  rules
.github/ppa-wip/jammy/debian/: changelog  control  copyright
.github/workflows/: conda-dev.yml  main.yml
Papers/GrinGo/branches/Propagators/DifferenceLogic/Propagator_only/: README  differenceLogic.lp  dl_lang.lp  open_shop_dl.lp  tai4_4_1.lp
app/: CMakeLists.txt  main.cc
app/lib/: CMakeLists.txt
app/lib/clingo-dl-app/: app.hh
app/lib/src/: app.cc
app/src/: main.cc
cmake/: ClingoDLConfig.cmake.in
examples/: pyclingo-dl.py
examples/libloading/: propagator-lua.lp  propagator-py.lp
examples/python/: README.md  example.lp  example.py  theory.py
examples/taskassignment/: encoding-dl.lp
examples/train-scheduling-benchmarks/: README.md  solve_and_check.sh
examples/train-scheduling-benchmarks/encodings/: delay_binary.lp  delay_exponential.lp  delay_linear.lp  encoding.lp  h1.lp  h2.lp  h3.lp  minimize_delay.lp  minimize_routes.lp  output.lp  preprocessing.lp
examples/train-scheduling-benchmarks/instances/asp/: 01_dummy.lp  02_a_little_less_dummy.lp  03_FWA_0.125.lp  example.lp
examples/train-scheduling-benchmarks/instances/json/: 01_dummy.json
examples/train-scheduling-benchmarks/utils/: asp2json.py  translate.py  validate_solution.py
libclingo-dl/: CMakeLists.txt  clingo-dl.h
libclingo-dl/clingo-dl/: app.hh  astutil.hh  astutil_impl.hh  config.hh  graph.hh  parsing.hh  propagator.hh  theory.hh  util.hh
libclingo-dl/clingo-dl/impl/: util.hh
libclingo-dl/src/: astutil.cc  clingo-dl.cc  graph.cc  parsing.cc  propagator.cc  theory.cc
libclingo-dl/tests/: CMakeLists.txt  main.cc  optimize.cc  parsing.cc  solve.cc
libpyclingo-dl/: CMakeLists.txt  _clingodl.c  compile.py
libpyclingo-dl/clingodl/: __init__.py  __main__.py
reproduce/: encoding.lp  instance.lp
scratch/: release-wv.sh  release.sh  runtests.py
